Lots of bugfixes and performance optimizations. Could still use a lot of perf optimization.

--- a/public/index.html
+++ b/public/index.html
@@ -5,20 +5,31 @@
   <style>
     body {
       background-color: black;
+      font-family: georgia;
     }
 
-    a {
-      display: block;
+    p {
       text-align: center;
-      padding: 10px 0;
+      padding: 15px 20px;
       border-radius: 3px;
       background-color: white;
       width: 200px;
-      margin: 150px auto;
+      margin: 100px auto;
     }
   </style>
 </head>
 <body>
-  <a href="javascript:(function(){var s = document.createElement('script');s.src = '//epic-laser-battle.com/epic-laser-battle.min.js';document.body.appendChild(s);})();">I'm a bookmarklet!</a>
+  <p>
+    <a href="javascript:(function(){var s = document.createElement('script');s.src = '//epic-laser-battle.com/epic-laser-battle.js';document.body.appendChild(s);})();">
+      Click here
+    </a>
+    to start an epic laser battle or drag to your bookmarks bar to create a bookmarklet.
+  </p>
+
+  <img class="person" src="/img/aaron.png" />
+  <img class="person" src="/img/limin.png" />
+  <img class="person" src="/img/oliver.png" />
+  <img class="person" src="/img/christian.png" />
+
 </body>
 </html>
