--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
 </head>
 <body>
   <p>
-    <a href="javascript:(function(){var s = document.createElement('script');s.src = '//epic-laser-battle.com/epic-laser-battle.js';document.body.appendChild(s); s.onload = function () { window.EPICLASERBATTLE(); } })();">
+    <a href="javascript:(function(){var s = document.createElement('script');s.src = '//epic-laser-battle.com/epic-laser-battle.min.js';document.body.appendChild(s); s.onload = function () { window.EPICLASERBATTLE(); } })();">
       Click here
     </a>
     to start an epic laser battle or drag to your bookmarks bar to create a bookmarklet.
